Fix issue w/ close icon not showing up on iPhone

--- a/app/_components/CloseIcon/CloseIcon.scss
+++ b/app/_components/CloseIcon/CloseIcon.scss
@@ -7,5 +7,5 @@
   width: .875rem;
   top: $padding-top--mobile;
   cursor: pointer;
-  transform: translateX(-100%);
+  transform: translateX(-150%);
 }
